debug for pink
